--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,3 +1,9 @@
 @import "variables";
 @import "base";
 @import "header";
+@import "screens";
+@import "compare";
+@import "counters";
+@import "features";
+@import "browsers";
+@import "footer"
